--- a/Frontend/src/assets/locales/es-ES.json
+++ b/Frontend/src/assets/locales/es-ES.json
@@ -33,23 +33,24 @@
     "exporting": "Exportando...",
     "importing": "Importando...",
     "Latest": "Última",
-    "refresh": "Refresh",
-    "unknown": "Unknown"
+    "refresh": "Actualizar",
+    "unknown": "Desconocido",
+    "clear": "Limpiar"
   },
   "app": {
     "title": "HyPrism",
     "version": "HyPrism {0}",
     "gameCrashed": "Game crashed with exit code {{code}}",
     "downloadedUpdate": "Downloaded the latest HyPrism to your Downloads folder.",
-    "downloadedUpdateHint": "We attempted to open the file so you can install it. If it did not open, go to Downloads and run the file manually.",
+    "downloadedUpdateHint": "Intentamos abrir el archivo para que puedas instalarlo. Si no se abrió, ve a Descargas y ejecuta el archivo manualmente.",
     "failedUpdate": "Failed to update launcher",
     "invalidNickname": "Invalid Nickname",
     "nicknameLengthError": "Nickname must be between 1 and 16 characters",
-    "enterInstancePath": "Enter the full path where you want HyPrism instances stored:",
-    "failedChangeDir": "Failed to change instance directory",
-    "pathError": "The path could not be used. Please check it exists and you have write permissions.",
-    "instanceDirUpdated": "Instance Directory Updated",
-    "instanceDirUpdatedDetail": "Game instances will now be stored in:\n{{dir}}\n\nNote: The following remain in AppData:\n• Java Runtime (JRE)\n• Butler tool\n• Cache files\n• Logs\n• Launcher settings\n• WebView2 (EBWebView folder)\n\nYou may need to reinstall the game if switching drives."
+    "enterInstancePath": "Ingresa la ruta completa donde quieres almacenar las instancias de HyPrism:",
+    "failedChangeDir": "Error al cambiar el directorio de instancias",
+    "pathError": "No se pudo usar la ruta. Verifica que exista y tengas permisos de escritura.",
+    "instanceDirUpdated": "Directorio de Instancias Actualizado",
+    "instanceDirUpdatedDetail": "Las instancias del juego ahora se almacenarán en:\n{{dir}}\n\nNota: Lo siguiente permanece en AppData:\n• Java Runtime (JRE)\n• Herramienta Butler\n• Archivos de caché\n• Registros\n• Configuración del lanzador\n• WebView2 (carpeta EBWebView)\n\nEs posible que necesites reinstalar el juego si cambias de unidad."
   },
   "dock": {
     "dashboard": "Inicio",
@@ -84,7 +85,8 @@
     "modManager": "Gestor de Mods",
     "openInstanceFolder": "Abrir carpeta de instancia",
     "settings": "Ajustes",
-    "stop": "PARAR"
+    "stop": "PARAR",
+    "officialServerBlocked": "Los servidores oficiales requieren un juego comprado y una cuenta de Hytale"
   },
   "settings": {
     "title": "Ajustes",
@@ -92,19 +94,19 @@
     "general": "General",
     "visuals": "Visual",
     "visual": "Visual",
-    "graphics": "Graphics",
+    "graphics": "Gráficos",
     "language": "Idioma",
     "data": "Datos",
     "instances": "Instancias",
     "about": "Acerca de",
-    "developer": "Developer",
+    "developer": "Desarrollador",
     "close": "Cerrar",
     "browse": "Examinar",
-    "devMode": "Dev Mode",
+    "devMode": "Modo Desarrollador",
     "profile": {
       "title": "Mi Perfil",
       "avatar": "Avatar",
-      "uploadSkin": "Upload Skin",
+      "uploadSkin": "Subir Skin",
       "displayName": "Nombre",
       "displayNameHint": "Nombre en el juego (1-16 car.).",
       "nameWarning": "Hytale tiene un patrón específico de apodos. Usa solo caracteres en inglés y números (0-9), evitando símbolos especiales y espacios (excepciones: '-', '_')",
@@ -115,21 +117,21 @@
     },
     "generalSettings": {
       "title": "Ajustes Generales",
-      "watchTutorial": "Watch Tutorial",
+      "watchTutorial": "Ver Tutorial",
       "launcherStorage": "Almacenamiento",
       "launcherStorageHint": "Ubicación de datos y juegos.",
       "updateChannel": "Canal de Actualización",
       "updateChannelStable": "Estable (Recomendado)",
       "updateChannelBeta": "Beta (Experimental)",
       "updateChannelExperimental": "Experimental",
-      "updateChannelStableHint": "Recommended for most users",
-      "updateChannelBetaHint": "Get early access to new features",
-      "updateChannelBetaWarning": "You will receive beta updates which may be unstable.",
+      "updateChannelStableHint": "Recomendado para la mayoría de los usuarios",
+      "updateChannelBetaHint": "Acceso anticipado a nuevas funciones",
+      "updateChannelBetaWarning": "Recibirás actualizaciones beta que pueden ser inestables.",
       "updateChannelHint": "Solo versiones estables.",
       "closeLauncher": "Cerrar Launcher",
       "closeLauncherHint": "Cerrar al iniciar el juego.",
-      "showAlphaMods": "Show Alpha Mods",
-      "showAlphaModsHint": "Show mods with alpha release type in the mod manager"
+      "showAlphaMods": "Mostrar Mods Alpha",
+      "showAlphaModsHint": "Mostrar mods con tipo de lanzamiento alpha en el administrador de mods"
     },
     "visualSettings": {
       "title": "Ajustes Visuales",
@@ -137,19 +139,19 @@
       "background": "Fondo",
       "autoShuffle": "Auto / Aleatorio",
       "current": "Actual",
-      "slideshow": "Slideshow",
-      "slideshowHint": "Cycle through all backgrounds",
-      "staticBackground": "Or choose a static background:",
-      "solidColors": "Solid Colors",
-      "hideNews": "Hide News",
-      "hideNewsHint": "Completely hide the news panel",
-      "chooseBackground": "Choose Background",
-      "images": "Images",
-      "animatedGlass": "Animated Glass Effects",
-      "animatedGlassHint": "Enable smooth entrance animations for panels and menus. Disable for better performance."
+      "slideshow": "Presentación",
+      "slideshowHint": "Alternar entre todos los fondos",
+      "staticBackground": "O elige un fondo estático:",
+      "solidColors": "Colores Sólidos",
+      "hideNews": "Ocultar Noticias",
+      "hideNewsHint": "Ocultar completamente el panel de noticias",
+      "chooseBackground": "Elegir Fondo",
+      "images": "Imágenes",
+      "animatedGlass": "Efectos de Vidrio Animados",
+      "animatedGlassHint": "Habilitar animaciones de entrada suaves para paneles y menús. Deshabilitar para mejor rendimiento."
     },
     "graphicsSettings": {
-      "title": "Graphics Settings",
+      "title": "Configuración de Gráficos",
       "optimizationMods": "Optimization Mods",
       "optimizationModsHint": "Download and install optimization mods to improve game performance",
       "enableOptimizationMods": "Enable Optimization Mods",
@@ -157,15 +159,15 @@
       "installOptModsAction": "Install 8 performance mods to all profiles",
       "optModsInstalled": "Optimization mods installed!",
       "optModsFailed": "Failed to install optimization mods",
-      "gpuPreference": "GPU Preference",
-      "gpuPreferenceHint": "Choose which GPU to use for launching the game. Useful for laptops with both integrated and dedicated graphics.",
-      "gpu_dedicated": "Dedicated",
-      "gpu_dedicatedHint": "Use discrete GPU (NVIDIA/AMD)",
-      "gpu_integrated": "Integrated",
-      "gpu_integratedHint": "Use built-in GPU (Intel/AMD)",
+      "gpuPreference": "Preferencia de GPU",
+      "gpuPreferenceHint": "Elige qué GPU usar para ejecutar el juego. Útil para portátiles con gráficos integrados y dedicados.",
+      "gpu_dedicated": "Dedicada",
+      "gpu_dedicatedHint": "Usar GPU discreta (NVIDIA/AMD)",
+      "gpu_integrated": "Integrada",
+      "gpu_integratedHint": "Usar GPU integrada (Intel/AMD)",
       "gpu_auto": "Auto",
-      "gpu_autoHint": "Let the system decide",
-      "singleGpuNotice": "Only one GPU detected — selection is locked to Auto mode."
+      "gpu_autoHint": "Dejar que el sistema decida",
+      "singleGpuNotice": "Solo se detectó una GPU — la selección está bloqueada en modo Auto."
     },
     "languageSettings": {
       "title": "Idioma",
@@ -199,11 +201,11 @@
       "launchBranch": "Rama de inicio",
       "userData": "Datos de usuario",
       "empty": "Parece que aún no has descargado nada.",
-      "dropZipImport": "Drop ZIP to import instance",
-      "noInstances": "No instances installed",
-      "installHytale": "Install Hytale to create an instance",
-      "notPlayed": "Not played",
-      "never": "Never",
+      "dropZipImport": "Suelta ZIP para importar instancia",
+      "noInstances": "No hay instancias instaladas",
+      "installHytale": "Instala Hytale para crear una instancia",
+      "notPlayed": "No jugado",
+      "never": "Nunca",
       "exportInstance": "Export Instance",
       "playtime": "Playtime",
       "version": "Version",
@@ -211,9 +213,9 @@
       "updated": "Updated",
       "lastPlayed": "Last Played",
       "clickToRefresh": "Click to refresh",
-      "exportedSuccess": "Exported to",
-      "noUserData": "No UserData folder to export",
-      "exportFailed": "Failed to export instance"
+      "exportedSuccess": "Exportado a",
+      "noUserData": "No hay carpeta UserData para exportar",
+      "exportFailed": "Error al exportar instancia"
     },
     "aboutSettings": {
       "title": "Lanzador HyPrism",
@@ -230,8 +232,8 @@
       "replayIntro": "Replay Introduction"
     },
     "developerSettings": {
-      "title": "Developer Settings",
-      "warning": "Developer options are for testing only",
+      "title": "Configuración de Desarrollador",
+      "warning": "Las opciones de desarrollador son solo para pruebas",
       "onboarding": "Onboarding",
       "introRestart": "Intro will show on next launch. Please restart the launcher.",
       "showIntro": "Show Intro on Next Launch",
@@ -246,7 +248,7 @@
       "message": "This will delete the {{branch}} {{version}} instance and all its data. This action cannot be undone."
     },
     "exportInstance": {
-      "title": "Export Instance",
+      "title": "Exportar Instancia",
       "exportType": "Export Type",
       "zipArchive": "ZIP Archive",
       "zipArchiveHint": "All instance data bundled",
@@ -257,7 +259,7 @@
       "title": "Import Instance",
       "importing": "Importing",
       "selectInstance": "Select which instance to import the UserData into:",
-      "importingProgress": "Importing..."
+      "importingProgress": "Importando..."
     },
     "languageChanged": {
       "title": "Language Changed",
@@ -268,16 +270,16 @@
     },
     "network": "Red",
     "networkSettings": {
-      "onlineMode": "Online Mode",
-      "onlineModeHint": "Connect to authentication servers for multiplayer.",
-      "authServer": "Auth Server",
-      "authServerHint": "Select the authentication server used for online play.",
-      "authDefault": "Default",
-      "authOfficial": "Official",
-      "authOfficialHint": "Hytale servers",
-      "authCustom": "Custom",
-      "authCustomHint": "Enter your own auth server address",
-      "currentServer": "Current server"
+      "onlineMode": "Modo Online",
+      "onlineModeHint": "Conectar a servidores de autenticación para multijugador.",
+      "authServer": "Servidor de Autenticación",
+      "authServerHint": "Selecciona el servidor de autenticación usado para juego online.",
+      "authDefault": "Predeterminado",
+      "authOfficial": "Oficial",
+      "authOfficialHint": "Servidores de Hytale",
+      "authCustom": "Personalizado",
+      "authCustomHint": "Ingresa tu propia dirección de servidor de autenticación",
+      "currentServer": "Servidor actual"
     }
   },
   "news": {
@@ -288,11 +290,11 @@
     "loading": "Cargando...",
     "readMore": "Leer en hytale.com",
     "tryAgain": "Reintentar",
-    "disabled": "News is disabled",
-    "enableInSettings": "Enable news in Settings",
-    "noNewsFound": "No news found",
-    "expand": "Expand",
-    "minimize": "Minimize"
+    "disabled": "Noticias deshabilitadas",
+    "enableInSettings": "Habilitar noticias en Configuración",
+    "noNewsFound": "No se encontraron noticias",
+    "expand": "Expandir",
+    "minimize": "Minimizar"
   },
   "instances": {
     "title": "Instances",
@@ -330,7 +332,15 @@
     "saves": "Saves",
     "noSaves": "No saves found",
     "noSavesHint": "Play the game to create your first save",
-    "logsComingSoon": "Logs viewer coming soon"
+    "logsComingSoon": "Logs viewer coming soon",
+    "createInstance": "Crear Instancia",
+    "createInstanceHint": "Descarga y configura una nueva instancia del juego",
+    "instanceName": "Nombre de Instancia",
+    "instanceNamePlaceholder": "Introduce un nombre para esta instancia",
+    "selectIcon": "Seleccionar Icono",
+    "uploadIcon": "Subir Icono",
+    "creating": "Creando...",
+    "create": "Crear"
   },
   "profiles": {
     "title": "Profiles",
@@ -351,7 +361,33 @@
     "editUuid": "Edit UUID",
     "saveUuid": "Save UUID",
     "openFolder": "Open Profile Folder",
-    "saved": "Profile saved!"
+    "saved": "Profile saved!",
+    "officialLocked": "Los perfiles oficiales de Hytale no se pueden editar",
+    "wizard": {
+      "title": "Crear Nuevo Perfil",
+      "chooseType": "Elige cómo quieres crear tu perfil",
+      "official": "Cuenta Oficial de Hytale",
+      "officialDesc": "Inicia sesión con tu cuenta de Hytale para jugar en servidores oficiales",
+      "unofficial": "Perfil Sin Conexión",
+      "unofficialDesc": "Crea un perfil local con nombre y UUID personalizados",
+      "authTitle": "Iniciar sesión con Hytale",
+      "authDesc": "Serás redirigido a la página de inicio de sesión de Hytale en tu navegador. Después de iniciar sesión, tu perfil se creará automáticamente.",
+      "loginHytale": "Iniciar sesión con Hytale",
+      "waitingAuth": "Esperando inicio de sesión...",
+      "browserHint": "Completa el inicio de sesión en tu navegador. Esta ventana se actualizará automáticamente.",
+      "authFailed": "El inicio de sesión no se completó. Por favor, inténtalo de nuevo.",
+      "authError": "Ocurrió un error durante el inicio de sesión. Por favor, inténtalo de nuevo.",
+      "noHytaleProfile": "Tu cuenta de Hytale aún no tiene perfiles de juego. Se creará un perfil de juego cuando accedas al juego por primera vez.",
+      "nameTitle": "Elige un Apodo",
+      "nameDesc": "Elige un nombre para tu perfil sin conexión (3-13 caracteres, letras inglesas, dígitos, - y _)",
+      "namePlaceholder": "Introduce apodo...",
+      "characters": "caracteres",
+      "nickRules": "Solo A-Z, 0-9, - y _",
+      "nickInvalid": "El apodo debe tener 3-13 caracteres: letras inglesas, dígitos, guion o guion bajo.",
+      "create": "Crear Perfil",
+      "createFailed": "Error al crear el perfil. Por favor, inténtalo de nuevo.",
+      "createError": "Ocurrió un error al crear el perfil."
+    }
   },
   "launch": {
     "state": {
@@ -408,7 +444,10 @@
       "downloading_generic": "Descargando Hytale... {0}%",
       "installing_butler_pwr": "Instalando juego con Butler...",
       "using_cached_installer": "Usando instalador en caché...",
-      "download_complete": "¡Descarga completada!"
+      "download_complete": "¡Descarga completada!",
+      "checking_versions": "Comprobando versiones disponibles...",
+      "installing_butler": "Configurando motor de descarga...",
+      "downloading_mirror": "Descargando desde espejo... {0}%"
     }
   },
   "profileEditor": {
@@ -571,10 +610,10 @@
     "installFailed": "Failed to install mods. Please try again.",
     "importFailed": "Failed to import mods",
     "releaseType": {
-      "release": "Release",
+      "release": "Lanzamiento",
       "beta": "Beta",
-      "alpha": "Alpha",
-      "unknown": "Unknown"
+      "alpha": "Alfa",
+      "unknown": "Desconocido"
     },
     "exportType": {
       "title": "Export Type",
@@ -585,22 +624,52 @@
       "exportFolder": "Export Folder",
       "selectFolder": "Select export folder..."
     },
-    "searchMods": "Search mods...",
+    "searchMods": "Buscar mods...",
     "mods": "Mods",
-    "name": "Name",
-    "version": "Version",
-    "enabled": "Enabled",
-    "modsInstalled": "mods installed",
-    "updatesAvailableShort": "updates",
-    "clickInstallContent": "Click 'Install content' to add mods",
-    "unknownAuthor": "Unknown Author",
-    "updateBadge": "Update",
-    "deleteSelected": "Delete Selected",
-    "deleteFailed": "Failed to delete mod",
-    "deleteModTitle": "Delete Mod",
-    "deleteModConfirm": "Are you sure you want to delete this mod?",
-    "modDeleted": "Mod deleted successfully",
-    "modsDeleted": "Mods deleted successfully"
+    "name": "Nombre",
+    "version": "Versión",
+    "enabled": "Habilitado",
+    "modsInstalled": "mods instalados",
+    "updatesAvailableShort": "actualizaciones",
+    "clickInstallContent": "Haz clic en \"Instalar contenido\" para agregar mods",
+    "unknownAuthor": "Autor Desconocido",
+    "updateBadge": "Actualizar",
+    "deleteSelected": "Eliminar Seleccionados",
+    "deleteFailed": "Error al eliminar mod",
+    "deleteModTitle": "Eliminar Mod",
+    "deleteModConfirm": "¿Estás seguro de que quieres eliminar este mod?",
+    "modDeleted": "Mod eliminado exitosamente",
+    "modsDeleted": "Mods eliminados exitosamente",
+    "browseMods": "Explorar Mods",
+    "installSelected": "Instalar Seleccionados",
+    "selectedForInstall": "Seleccionado para instalar",
+    "selectForInstall": "Seleccionar para instalar (Shift+clic para rango)",
+    "allMods": "Todos los Mods",
+    "modsSelected": "mod(s) seleccionado(s)",
+    "downloadSelected": "Descargar Seleccionados",
+    "downloading": "Descargando",
+    "selectVersion": "Seleccionar Versión",
+    "noFilesAvailable": "No hay archivos disponibles",
+    "author": "Autor",
+    "downloads": "Descargas",
+    "searchFailed": "Error al buscar mods",
+    "downloadFailed": "Error de descarga",
+    "category": {
+      "all_mods": "Todos los Mods",
+      "blocks": "Bloques",
+      "cosmetics_armor": "Cosméticos / Armadura",
+      "food_farming": "Comida / Agricultura",
+      "furniture": "Muebles",
+      "gameplay": "Jugabilidad",
+      "library": "Biblioteca",
+      "miscellaneous": "Miscelánea",
+      "mobs_characters": "Mobs / Personajes",
+      "prefab": "Prefab",
+      "quality_of_life": "Calidad de Vida",
+      "resource_packs": "Paquetes de Recursos",
+      "utility": "Utilidad",
+      "world_gen": "Generación de Mundo"
+    }
   },
   "onboarding": {
     "language": "Idioma",
@@ -608,7 +677,7 @@
     "visual": "Visual",
     "location": "Ubicación",
     "about": "Acerca de",
-    "unofficial": "Unofficial Hytale Launcher",
+    "unofficial": "Lanzador No Oficial de Hytale",
     "getStarted": "Empezar",
     "skip": "Omitir",
     "welcome": "Bienvenido a HyPrism",
