--- a/Frontend/src/assets/locales/fr-FR.json
+++ b/Frontend/src/assets/locales/fr-FR.json
@@ -33,23 +33,24 @@
     "exporting": "Export...",
     "importing": "Import...",
     "Latest": "Dernière",
-    "refresh": "Refresh",
-    "unknown": "Unknown"
+    "refresh": "Actualiser",
+    "unknown": "Inconnu",
+    "clear": "Effacer"
   },
   "app": {
     "title": "HyPrism",
     "version": "HyPrism {0}",
     "gameCrashed": "Game crashed with exit code {{code}}",
     "downloadedUpdate": "Downloaded the latest HyPrism to your Downloads folder.",
-    "downloadedUpdateHint": "We attempted to open the file so you can install it. If it did not open, go to Downloads and run the file manually.",
+    "downloadedUpdateHint": "Nous avons tenté d'ouvrir le fichier pour que vous puissiez l'installer. S'il ne s'est pas ouvert, allez dans Téléchargements et exécutez le fichier manuellement.",
     "failedUpdate": "Failed to update launcher",
     "invalidNickname": "Invalid Nickname",
     "nicknameLengthError": "Nickname must be between 1 and 16 characters",
-    "enterInstancePath": "Enter the full path where you want HyPrism instances stored:",
-    "failedChangeDir": "Failed to change instance directory",
-    "pathError": "The path could not be used. Please check it exists and you have write permissions.",
-    "instanceDirUpdated": "Instance Directory Updated",
-    "instanceDirUpdatedDetail": "Game instances will now be stored in:\n{{dir}}\n\nNote: The following remain in AppData:\n• Java Runtime (JRE)\n• Butler tool\n• Cache files\n• Logs\n• Launcher settings\n• WebView2 (EBWebView folder)\n\nYou may need to reinstall the game if switching drives."
+    "enterInstancePath": "Entrez le chemin complet où vous souhaitez stocker les instances HyPrism:",
+    "failedChangeDir": "Échec du changement de répertoire d'instance",
+    "pathError": "Le chemin n'a pas pu être utilisé. Vérifiez qu'il existe et que vous avez les permissions d'écriture.",
+    "instanceDirUpdated": "Répertoire d'Instance Mis à Jour",
+    "instanceDirUpdatedDetail": "Les instances de jeu seront maintenant stockées dans:\n{{dir}}\n\nRemarque: Les éléments suivants restent dans AppData:\n• Java Runtime (JRE)\n• Outil Butler\n• Fichiers de cache\n• Journaux\n• Paramètres du lanceur\n• WebView2 (dossier EBWebView)\n\nVous devrez peut-être réinstaller le jeu si vous changez de lecteur."
   },
   "dock": {
     "dashboard": "Accueil",
@@ -84,27 +85,28 @@
     "modManager": "Gestionnaire de mods",
     "openInstanceFolder": "Ouvrir le dossier d'instance",
     "settings": "Paramètres",
-    "stop": "ARRÊTER"
+    "stop": "ARRÊTER",
+    "officialServerBlocked": "Les serveurs officiels nécessitent un jeu acheté et un compte Hytale"
   },
   "settings": {
     "title": "Paramètres",
     "myProfile": "Mon Profil",
     "general": "Général",
     "visuals": "Visuels",
-    "visual": "Visual",
-    "graphics": "Graphics",
+    "visual": "Visuel",
+    "graphics": "Graphiques",
     "language": "Langue",
     "data": "Données",
     "instances": "Instances",
     "about": "À propos",
-    "developer": "Developer",
+    "developer": "Développeur",
     "close": "Fermer",
     "browse": "Parcourir",
-    "devMode": "Dev Mode",
+    "devMode": "Mode Développeur",
     "profile": {
       "title": "Mon Profil",
       "avatar": "Avatar",
-      "uploadSkin": "Upload Skin",
+      "uploadSkin": "Télécharger un Skin",
       "displayName": "Pseudo",
       "displayNameHint": "Nom en jeu (1-16 car.).",
       "nameWarning": "Hytale a un modèle de pseudo spécifique. Utilisez uniquement des caractères anglais et des chiffres (0-9), en évitant les symboles spéciaux et les espaces (exceptions : '-', '_')",
@@ -115,21 +117,21 @@
     },
     "generalSettings": {
       "title": "Général",
-      "watchTutorial": "Watch Tutorial",
+      "watchTutorial": "Regarder le Tutoriel",
       "launcherStorage": "Stockage",
       "launcherStorageHint": "Emplacement des fichiers.",
       "updateChannel": "Canal de mise à jour",
       "updateChannelStable": "Stable (Recommandé)",
       "updateChannelBeta": "Beta (Expérimental)",
-      "updateChannelExperimental": "Experimental",
-      "updateChannelStableHint": "Recommended for most users",
-      "updateChannelBetaHint": "Get early access to new features",
-      "updateChannelBetaWarning": "You will receive beta updates which may be unstable.",
+      "updateChannelExperimental": "Expérimental",
+      "updateChannelStableHint": "Recommandé pour la plupart des utilisateurs",
+      "updateChannelBetaHint": "Accès anticipé aux nouvelles fonctionnalités",
+      "updateChannelBetaWarning": "Vous recevrez des mises à jour bêta qui peuvent être instables.",
       "updateChannelHint": "Versions stables uniquement.",
       "closeLauncher": "Fermer le lanceur",
       "closeLauncherHint": "Fermer au lancement du jeu.",
-      "showAlphaMods": "Show Alpha Mods",
-      "showAlphaModsHint": "Show mods with alpha release type in the mod manager"
+      "showAlphaMods": "Afficher les Mods Alpha",
+      "showAlphaModsHint": "Afficher les mods avec le type de version alpha dans le gestionnaire de mods"
     },
     "visualSettings": {
       "title": "Apparence",
@@ -137,19 +139,19 @@
       "background": "Arrière-plan",
       "autoShuffle": "Auto / Aléatoire",
       "current": "Actuel",
-      "slideshow": "Slideshow",
-      "slideshowHint": "Cycle through all backgrounds",
-      "staticBackground": "Or choose a static background:",
-      "solidColors": "Solid Colors",
-      "hideNews": "Hide News",
-      "hideNewsHint": "Completely hide the news panel",
-      "chooseBackground": "Choose Background",
+      "slideshow": "Diaporama",
+      "slideshowHint": "Faire défiler tous les arrière-plans",
+      "staticBackground": "Ou choisissez un arrière-plan statique:",
+      "solidColors": "Couleurs Unies",
+      "hideNews": "Masquer les Actualités",
+      "hideNewsHint": "Masquer complètement le panneau d'actualités",
+      "chooseBackground": "Choisir l'Arrière-plan",
       "images": "Images",
-      "animatedGlass": "Animated Glass Effects",
-      "animatedGlassHint": "Enable smooth entrance animations for panels and menus. Disable for better performance."
+      "animatedGlass": "Effets de Verre Animés",
+      "animatedGlassHint": "Activer les animations d'entrée douces pour les panneaux et les menus. Désactiver pour de meilleures performances."
     },
     "graphicsSettings": {
-      "title": "Graphics Settings",
+      "title": "Paramètres Graphiques",
       "optimizationMods": "Optimization Mods",
       "optimizationModsHint": "Download and install optimization mods to improve game performance",
       "enableOptimizationMods": "Enable Optimization Mods",
@@ -157,15 +159,15 @@
       "installOptModsAction": "Install 8 performance mods to all profiles",
       "optModsInstalled": "Optimization mods installed!",
       "optModsFailed": "Failed to install optimization mods",
-      "gpuPreference": "GPU Preference",
-      "gpuPreferenceHint": "Choose which GPU to use for launching the game. Useful for laptops with both integrated and dedicated graphics.",
-      "gpu_dedicated": "Dedicated",
-      "gpu_dedicatedHint": "Use discrete GPU (NVIDIA/AMD)",
-      "gpu_integrated": "Integrated",
-      "gpu_integratedHint": "Use built-in GPU (Intel/AMD)",
+      "gpuPreference": "Préférence GPU",
+      "gpuPreferenceHint": "Choisissez quel GPU utiliser pour lancer le jeu. Utile pour les ordinateurs portables avec graphiques intégrés et dédiés.",
+      "gpu_dedicated": "Dédiée",
+      "gpu_dedicatedHint": "Utiliser le GPU dédié (NVIDIA/AMD)",
+      "gpu_integrated": "Intégrée",
+      "gpu_integratedHint": "Utiliser le GPU intégré (Intel/AMD)",
       "gpu_auto": "Auto",
-      "gpu_autoHint": "Let the system decide",
-      "singleGpuNotice": "Only one GPU detected — selection is locked to Auto mode."
+      "gpu_autoHint": "Laisser le système décider",
+      "singleGpuNotice": "Un seul GPU détecté — la sélection est verrouillée en mode Auto."
     },
     "languageSettings": {
       "title": "Langue",
@@ -199,11 +201,11 @@
       "launchBranch": "Branche de lancement",
       "userData": "Données utilisateur",
       "empty": "On dirait que vous n'avez encore rien téléchargé.",
-      "dropZipImport": "Drop ZIP to import instance",
-      "noInstances": "No instances installed",
-      "installHytale": "Install Hytale to create an instance",
-      "notPlayed": "Not played",
-      "never": "Never",
+      "dropZipImport": "Déposer un ZIP pour importer une instance",
+      "noInstances": "Aucune instance installée",
+      "installHytale": "Installer Hytale pour créer une instance",
+      "notPlayed": "Non joué",
+      "never": "Jamais",
       "exportInstance": "Export Instance",
       "playtime": "Playtime",
       "version": "Version",
@@ -211,9 +213,9 @@
       "updated": "Updated",
       "lastPlayed": "Last Played",
       "clickToRefresh": "Click to refresh",
-      "exportedSuccess": "Exported to",
-      "noUserData": "No UserData folder to export",
-      "exportFailed": "Failed to export instance"
+      "exportedSuccess": "Exporté vers",
+      "noUserData": "Aucun dossier UserData à exporter",
+      "exportFailed": "Échec de l'exportation de l'instance"
     },
     "aboutSettings": {
       "title": "Lanceur HyPrism",
@@ -230,8 +232,8 @@
       "replayIntro": "Replay Introduction"
     },
     "developerSettings": {
-      "title": "Developer Settings",
-      "warning": "Developer options are for testing only",
+      "title": "Paramètres Développeur",
+      "warning": "Les options développeur sont uniquement pour les tests",
       "onboarding": "Onboarding",
       "introRestart": "Intro will show on next launch. Please restart the launcher.",
       "showIntro": "Show Intro on Next Launch",
@@ -246,7 +248,7 @@
       "message": "This will delete the {{branch}} {{version}} instance and all its data. This action cannot be undone."
     },
     "exportInstance": {
-      "title": "Export Instance",
+      "title": "Exporter l'Instance",
       "exportType": "Export Type",
       "zipArchive": "ZIP Archive",
       "zipArchiveHint": "All instance data bundled",
@@ -257,7 +259,7 @@
       "title": "Import Instance",
       "importing": "Importing",
       "selectInstance": "Select which instance to import the UserData into:",
-      "importingProgress": "Importing..."
+      "importingProgress": "Importation..."
     },
     "languageChanged": {
       "title": "Language Changed",
@@ -268,16 +270,16 @@
     },
     "network": "Réseau",
     "networkSettings": {
-      "onlineMode": "Online Mode",
-      "onlineModeHint": "Connect to authentication servers for multiplayer.",
-      "authServer": "Auth Server",
-      "authServerHint": "Select the authentication server used for online play.",
-      "authDefault": "Default",
-      "authOfficial": "Official",
-      "authOfficialHint": "Hytale servers",
-      "authCustom": "Custom",
-      "authCustomHint": "Enter your own auth server address",
-      "currentServer": "Current server"
+      "onlineMode": "Mode En Ligne",
+      "onlineModeHint": "Se connecter aux serveurs d'authentification pour le multijoueur.",
+      "authServer": "Serveur d'Authentification",
+      "authServerHint": "Sélectionnez le serveur d'authentification utilisé pour le jeu en ligne.",
+      "authDefault": "Par Défaut",
+      "authOfficial": "Officiel",
+      "authOfficialHint": "Serveurs Hytale",
+      "authCustom": "Personnalisé",
+      "authCustomHint": "Entrez votre propre adresse de serveur d'authentification",
+      "currentServer": "Serveur actuel"
     }
   },
   "news": {
@@ -288,11 +290,11 @@
     "loading": "Chargement...",
     "readMore": "Lire sur hytale.com",
     "tryAgain": "Réessayer",
-    "disabled": "News is disabled",
-    "enableInSettings": "Enable news in Settings",
-    "noNewsFound": "No news found",
-    "expand": "Expand",
-    "minimize": "Minimize"
+    "disabled": "Actualités désactivées",
+    "enableInSettings": "Activer les actualités dans les Paramètres",
+    "noNewsFound": "Aucune actualité trouvée",
+    "expand": "Développer",
+    "minimize": "Réduire"
   },
   "instances": {
     "title": "Instances",
@@ -330,7 +332,15 @@
     "saves": "Saves",
     "noSaves": "No saves found",
     "noSavesHint": "Play the game to create your first save",
-    "logsComingSoon": "Logs viewer coming soon"
+    "logsComingSoon": "Logs viewer coming soon",
+    "createInstance": "Créer une Instance",
+    "createInstanceHint": "Téléchargez et configurez une nouvelle instance de jeu",
+    "instanceName": "Nom de l'Instance",
+    "instanceNamePlaceholder": "Entrez un nom pour cette instance",
+    "selectIcon": "Sélectionner une Icône",
+    "uploadIcon": "Télécharger une Icône",
+    "creating": "Création...",
+    "create": "Créer"
   },
   "profiles": {
     "title": "Profiles",
@@ -351,7 +361,33 @@
     "editUuid": "Edit UUID",
     "saveUuid": "Save UUID",
     "openFolder": "Open Profile Folder",
-    "saved": "Profile saved!"
+    "saved": "Profile saved!",
+    "officialLocked": "Les profils Hytale officiels ne peuvent pas être modifiés",
+    "wizard": {
+      "title": "Créer un Nouveau Profil",
+      "chooseType": "Choisissez comment créer votre profil",
+      "official": "Compte Hytale Officiel",
+      "officialDesc": "Connectez-vous avec votre compte Hytale pour jouer sur les serveurs officiels",
+      "unofficial": "Profil Hors Ligne",
+      "unofficialDesc": "Créez un profil local avec un nom et un UUID personnalisés",
+      "authTitle": "Se connecter avec Hytale",
+      "authDesc": "Vous serez redirigé vers la page de connexion Hytale dans votre navigateur. Après la connexion, votre profil sera créé automatiquement.",
+      "loginHytale": "Se connecter avec Hytale",
+      "waitingAuth": "En attente de connexion...",
+      "browserHint": "Terminez la connexion dans votre navigateur. Cette fenêtre se mettra à jour automatiquement.",
+      "authFailed": "La connexion n'a pas été complétée. Veuillez réessayer.",
+      "authError": "Une erreur s'est produite lors de la connexion. Veuillez réessayer.",
+      "noHytaleProfile": "Votre compte Hytale n'a pas encore de profils de jeu. Un profil de jeu sera créé lorsque vous accéderez au jeu pour la première fois.",
+      "nameTitle": "Choisissez un Pseudo",
+      "nameDesc": "Choisissez un nom pour votre profil hors ligne (3-13 caractères, lettres anglaises, chiffres, - et _)",
+      "namePlaceholder": "Entrez un pseudo...",
+      "characters": "caractères",
+      "nickRules": "A-Z, 0-9, - et _ uniquement",
+      "nickInvalid": "Le pseudo doit contenir 3-13 caractères : lettres anglaises, chiffres, tiret ou underscore.",
+      "create": "Créer le Profil",
+      "createFailed": "Échec de la création du profil. Veuillez réessayer.",
+      "createError": "Une erreur s'est produite lors de la création du profil."
+    }
   },
   "launch": {
     "state": {
@@ -408,7 +444,10 @@
       "downloading_generic": "Téléchargement de Hytale... {0}%",
       "installing_butler_pwr": "Installation du jeu avec Butler...",
       "using_cached_installer": "Utilisation de l’installateur en cache...",
-      "download_complete": "Téléchargement terminé !"
+      "download_complete": "Téléchargement terminé !",
+      "checking_versions": "Vérification des versions disponibles...",
+      "installing_butler": "Configuration du moteur de téléchargement...",
+      "downloading_mirror": "Téléchargement depuis le miroir... {0}%"
     }
   },
   "profileEditor": {
@@ -571,10 +610,10 @@
     "installFailed": "Failed to install mods. Please try again.",
     "importFailed": "Failed to import mods",
     "releaseType": {
-      "release": "Release",
-      "beta": "Beta",
+      "release": "Version",
+      "beta": "Bêta",
       "alpha": "Alpha",
-      "unknown": "Unknown"
+      "unknown": "Inconnu"
     },
     "exportType": {
       "title": "Export Type",
@@ -585,22 +624,52 @@
       "exportFolder": "Export Folder",
       "selectFolder": "Select export folder..."
     },
-    "searchMods": "Search mods...",
+    "searchMods": "Rechercher des mods...",
     "mods": "Mods",
-    "name": "Name",
+    "name": "Nom",
     "version": "Version",
-    "enabled": "Enabled",
-    "modsInstalled": "mods installed",
-    "updatesAvailableShort": "updates",
-    "clickInstallContent": "Click 'Install content' to add mods",
-    "unknownAuthor": "Unknown Author",
-    "updateBadge": "Update",
-    "deleteSelected": "Delete Selected",
-    "deleteFailed": "Failed to delete mod",
-    "deleteModTitle": "Delete Mod",
-    "deleteModConfirm": "Are you sure you want to delete this mod?",
-    "modDeleted": "Mod deleted successfully",
-    "modsDeleted": "Mods deleted successfully"
+    "enabled": "Activé",
+    "modsInstalled": "mods installés",
+    "updatesAvailableShort": "mises à jour",
+    "clickInstallContent": "Cliquez sur \"Installer le contenu\" pour ajouter des mods",
+    "unknownAuthor": "Auteur Inconnu",
+    "updateBadge": "Mettre à Jour",
+    "deleteSelected": "Supprimer les Sélectionnés",
+    "deleteFailed": "Échec de la suppression du mod",
+    "deleteModTitle": "Supprimer le Mod",
+    "deleteModConfirm": "Êtes-vous sûr de vouloir supprimer ce mod?",
+    "modDeleted": "Mod supprimé avec succès",
+    "modsDeleted": "Mods supprimés avec succès",
+    "browseMods": "Parcourir les Mods",
+    "installSelected": "Installer la Sélection",
+    "selectedForInstall": "Sélectionné pour l'installation",
+    "selectForInstall": "Sélectionner pour l'installation (Shift+clic pour la plage)",
+    "allMods": "Tous les Mods",
+    "modsSelected": "mod(s) sélectionné(s)",
+    "downloadSelected": "Télécharger la Sélection",
+    "downloading": "Téléchargement",
+    "selectVersion": "Sélectionner la Version",
+    "noFilesAvailable": "Aucun fichier disponible",
+    "author": "Auteur",
+    "downloads": "Téléchargements",
+    "searchFailed": "Échec de la recherche de mods",
+    "downloadFailed": "Échec du téléchargement",
+    "category": {
+      "all_mods": "Tous les Mods",
+      "blocks": "Blocs",
+      "cosmetics_armor": "Cosmétiques / Armure",
+      "food_farming": "Nourriture / Agriculture",
+      "furniture": "Mobilier",
+      "gameplay": "Gameplay",
+      "library": "Bibliothèque",
+      "miscellaneous": "Divers",
+      "mobs_characters": "Mobs / Personnages",
+      "prefab": "Prefab",
+      "quality_of_life": "Qualité de Vie",
+      "resource_packs": "Packs de Ressources",
+      "utility": "Utilitaire",
+      "world_gen": "Génération de Monde"
+    }
   },
   "onboarding": {
     "language": "Langue",
@@ -608,7 +677,7 @@
     "visual": "Visuel",
     "location": "Emplacement",
     "about": "À propos",
-    "unofficial": "Unofficial Hytale Launcher",
+    "unofficial": "Lanceur Non Officiel de Hytale",
     "getStarted": "Commencer",
     "skip": "Passer",
     "welcome": "Bienvenue sur HyPrism",
