--- a/Frontend/src/assets/locales/be-BY.json
+++ b/Frontend/src/assets/locales/be-BY.json
@@ -33,8 +33,9 @@
     "exporting": "Экспарт...",
     "importing": "Імпарт...",
     "Latest": "Апошняя",
-    "refresh": "Refresh",
-    "unknown": "Unknown"
+    "refresh": "Абнавіць",
+    "unknown": "Невядома",
+    "clear": "Ачысціць"
   },
   "app": {
     "title": "HyPrism",
@@ -84,7 +85,8 @@
     "modManager": "Менеджар модаў",
     "openInstanceFolder": "Адкрыць тэчку экзэмпляра",
     "settings": "Налады",
-    "stop": "СТОП"
+    "stop": "СТОП",
+    "officialServerBlocked": "Афіцыйныя серверы патрабуюць набытую гульню і ўліковы запіс Hytale"
   },
   "settings": {
     "title": "Налады",
@@ -330,7 +332,15 @@
     "saves": "Saves",
     "noSaves": "No saves found",
     "noSavesHint": "Play the game to create your first save",
-    "logsComingSoon": "Logs viewer coming soon"
+    "logsComingSoon": "Logs viewer coming soon",
+    "createInstance": "Стварыць Экзэмпляр",
+    "createInstanceHint": "Спампуйце і наладзьце новы экзэмпляр гульні",
+    "instanceName": "Назва Экзэмпляра",
+    "instanceNamePlaceholder": "Увядзіце назву для гэтага экзэмпляра",
+    "selectIcon": "Выбраць Іконку",
+    "uploadIcon": "Загрузіць Іконку",
+    "creating": "Стварэнне...",
+    "create": "Стварыць"
   },
   "profiles": {
     "title": "Profiles",
@@ -351,7 +361,33 @@
     "editUuid": "Edit UUID",
     "saveUuid": "Save UUID",
     "openFolder": "Open Profile Folder",
-    "saved": "Profile saved!"
+    "saved": "Profile saved!",
+    "officialLocked": "Афіцыйныя профілі Hytale нельга рэдагаваць",
+    "wizard": {
+      "title": "Стварыць Новы Профіль",
+      "chooseType": "Выберыце спосаб стварэння профілю",
+      "official": "Афіцыйны Уліковы Запіс Hytale",
+      "officialDesc": "Увайдзіце з уліковым запісам Hytale для гульні на афіцыйных серверах",
+      "unofficial": "Афлайн Профіль",
+      "unofficialDesc": "Стварыце лакальны профіль з уласным імем і UUID",
+      "authTitle": "Увайсці з Hytale",
+      "authDesc": "Вы будзеце перанакіраваны на старонку ўваходу Hytale у вашым браўзеры. Пасля ўваходу ваш профіль будзе створаны аўтаматычна.",
+      "loginHytale": "Увайсці з Hytale",
+      "waitingAuth": "Чаканне ўваходу...",
+      "browserHint": "Завяршыце ўваход у вашым браўзеры. Гэта акно абновіцца аўтаматычна.",
+      "authFailed": "Уваход не быў завершаны. Калі ласка, паспрабуйце яшчэ раз.",
+      "authError": "Падчас уваходу адбылася памылка. Калі ласка, паспрабуйце яшчэ раз.",
+      "noHytaleProfile": "Ваш уліковы запіс Hytale яшчэ не мае гульнявых профіляў. Гульнявы профіль будзе створаны пры першым доступе да гульні.",
+      "nameTitle": "Выберыце Мянушку",
+      "nameDesc": "Выберыце імя для вашага афлайн профілю (3-13 сімвалаў, англійскія літары, лічбы, - і _)",
+      "namePlaceholder": "Увядзіце мянушку...",
+      "characters": "сімвалаў",
+      "nickRules": "Толькі A-Z, 0-9, - і _",
+      "nickInvalid": "Мянушка павінна мець 3-13 сімвалаў: англійскія літары, лічбы, дэфіс або падкрэсленне.",
+      "create": "Стварыць Профіль",
+      "createFailed": "Не ўдалося стварыць профіль. Калі ласка, паспрабуйце яшчэ раз.",
+      "createError": "Падчас стварэння профілю адбылася памылка."
+    }
   },
   "launch": {
     "state": {
@@ -408,7 +444,10 @@
       "downloading_generic": "Загрузка Hytale... {0}%",
       "installing_butler_pwr": "Усталёўка гульні праз Butler...",
       "using_cached_installer": "Выкарыстоўваецца кэшаваны ўсталёўшчык...",
-      "download_complete": "Загрузка завершана!"
+      "download_complete": "Загрузка завершана!",
+      "checking_versions": "Праверка даступных версій...",
+      "installing_butler": "Наладка механізму загрузкі...",
+      "downloading_mirror": "Загрузка з люстэрка... {0}%"
     }
   },
   "profileEditor": {
@@ -600,7 +639,37 @@
     "deleteModTitle": "Delete Mod",
     "deleteModConfirm": "Are you sure you want to delete this mod?",
     "modDeleted": "Mod deleted successfully",
-    "modsDeleted": "Mods deleted successfully"
+    "modsDeleted": "Mods deleted successfully",
+    "browseMods": "Агляд Модаў",
+    "installSelected": "Усталяваць Выбранае",
+    "selectedForInstall": "Выбрана для ўсталявання",
+    "selectForInstall": "Выбраць для ўсталявання (Shift+клік для дыяпазону)",
+    "allMods": "Усе Моды",
+    "modsSelected": "мод(аў) выбрана",
+    "downloadSelected": "Спампаваць Выбранае",
+    "downloading": "Загрузка",
+    "selectVersion": "Выбраць Версію",
+    "noFilesAvailable": "Няма даступных файлаў",
+    "author": "Аўтар",
+    "downloads": "Загрузкі",
+    "searchFailed": "Не ўдалося знайсці моды",
+    "downloadFailed": "Памылка загрузкі",
+    "category": {
+      "all_mods": "Усе Моды",
+      "blocks": "Блокі",
+      "cosmetics_armor": "Касметыка / Браня",
+      "food_farming": "Ежа / Фермерства",
+      "furniture": "Мэбля",
+      "gameplay": "Геймплей",
+      "library": "Бібліятэка",
+      "miscellaneous": "Рознае",
+      "mobs_characters": "Мобы / Персанажы",
+      "prefab": "Prefab",
+      "quality_of_life": "Якасць Жыцця",
+      "resource_packs": "Пакеты Рэсурсаў",
+      "utility": "Утыліты",
+      "world_gen": "Генерацыя Свету"
+    }
   },
   "onboarding": {
     "language": "Мова",
